--- a/contactUsPage.html
+++ b/contactUsPage.html
@@ -10,10 +10,10 @@
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="../assets/css/nav.css">
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/headerHome.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/contactUsPage.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/headerHome.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/contactUsPage.css">
 
 </head>
 <body>
@@ -23,10 +23,10 @@
             <img class="Logo" src="/assets/images/Logo.png" alt="Logo" />
         </div>
         <div class="navbar-right" id="navbar-right">
-            <a href="homePage.html" target="_blank">Home</a>
-            <a href="productPage.html" target="_blank">Product</a>
-            <a href="recipesPage.html" target="_blank">Recipes</a>
-            <a href="aboutUsPage.html" target="_blank">About Us</a>
+            <a href="index.html">Home</a>
+            <a href="productPage.html">Product</a>
+            <a href="recipesPage.html">Recipes</a>
+            <a href="aboutUsPage.html">About Us</a>
             <a href="">Contact Us</a>
         </div>
         <div class="burger-icon" id="burger-icon">
