--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assets/images/icons/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/images/icons/favicon.png">
 
 
     <!-- Link css -->
@@ -42,11 +42,11 @@
     </nav>
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
-        <a href="homePage.html" target="_blank">Home</a>
-        <a href="productPage.html" target="_blank">Product</a>
-        <a href="recipesPage.html" target="_blank">Recipes</a>
-        <a href="aboutUsPage.html" target="_blank">About Us</a>
-        <a href="#" target="_blank">Contact Us</a>
+        <a href="#">Home</a>
+        <a href="/productPage.html" target="_blank">Product</a>
+        <a href="/recipesPage.html" target="_blank">Recipes</a>
+        <a href="/aboutUsPage.html" target="_blank">About Us</a>
+        <a href="/contactUsPage.html" target="_blank">Contact Us</a>
     </div>
 
 
@@ -56,7 +56,7 @@
         <h2>"Innovating Breakfast Since 1906. From Our Home in Battle Creek to Your Table Worldwide."</h2>
  
         <video autoplay muted loop plays-inline class="video-bg">
-            <source src="/assets/video/videoplayback.mp4" type="video/mp4">
+            <source src="./assets/video/videoplayback.mp4" type="video/mp4">
         </video>
     </header>
     
@@ -157,26 +157,26 @@
             <div class="contact">
                 <p>Contact us</p>
                 <a href="">
-                    <img src="/assets/images/icons/youtube.svg" alt="youtube">
+                    <img src="./assets/images/icons/youtube.svg" alt="youtube">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/twitter.svg" alt="twitter">
+                    <img src="./assets/images/icons/twitter.svg" alt="twitter">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/linkedin.svg" alt="linkedin">
+                    <img src="./assets/images/icons/linkedin.svg" alt="linkedin">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/facebook.svg" alt="facebook">
+                    <img src="./assets/images/icons/facebook.svg" alt="facebook">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/instagram.svg" alt="instagram">
+                    <img src="./assets/images/icons/instagram.svg" alt="instagram">
                 </a>
                 <a href="mailto:naufal.ananda@binus.ac.id">
-                    <img src="/assets/images/icons/email.svg" alt="email">
+                    <img src="./assets/images/icons/email.svg" alt="email">
                 </a>
             </div>
             <div class="footer-logo">
-                <img src="/assets/images/Logowhite2.png" alt="logo">
+                <img src="./assets/images/Logowhite2.png" alt="logo">
             </div>
         </section>
         <div class="credit">Copyright 2024 | Vkellogg'S </div>
