--- a/productPage.html
+++ b/productPage.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/assets/images/icons/favicon.png">
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="../assets/css/nav.css">
+    <link rel="stylesheet" href="./assets/css/nav.css">
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/headerHome.css">
     <link rel="stylesheet" href="/assets/css/footer.css">
@@ -19,14 +19,14 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar">
         <div class="navbar-left">
-            <img class="Logo" src="/assets/images/Logo.png" alt="Logo" />
+            <img class="Logo" src="./assets/images/Logo.png" alt="Logo" />
         </div>
         <div class="navbar-right" id="navbar-right">
-            <a href="homePage.html" target="_blank">Home</a>
-            <a href="productPage.html" target="_blank">Product</a>
-            <a href="recipesPage.html" target="_blank">Recipes</a>
-            <a href="aboutUsPage.html" target="_blank">About Us</a>
-            <a href="">Contact Us</a>
+            <a href="index.html">Home</a>
+            <a href="#">Product</a>
+            <a href="recipesPage.html">Recipes</a>
+            <a href="aboutUsPage.html">About Us</a>
+            <a href="contactUsPage.html">Contact Us</a>
         </div>
         <div class="burger-icon" id="burger-icon">
             <div class="bar"></div>
@@ -36,11 +36,11 @@
     </nav>
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
-        <a href="homePage.html" target="_blank">Home</a>
-        <a href="productPage.html" target="_blank">Product</a>
-        <a href="recipesPage.html" target="_blank">Recipes</a>
-        <a href="aboutUsPage.html" target="_blank">About Us</a>
-        <a href="#">Contact Us</a>
+        <a href="homePage.html">Home</a>
+        <a href="#">Product</a>
+        <a href="recipesPage.html">Recipes</a>
+        <a href="aboutUsPage.html">About Us</a>
+        <a href="contactUsPage.html">Contact Us</a>
     </div>
 
     <!-- Header -->
@@ -49,7 +49,7 @@
         <h2>"Innovating Breakfast Since 1906. From Our Home in Battle Creek to Your Table Worldwide."</h2>
         <h2>Let see our products</h2>
         <video autoplay muted loop plays-inline class="video-bg">
-            <source src="/assets/video/videoplayback.mp4" type="video/mp4">
+            <source src="./assets/video/videoplayback.mp4" type="video/mp4">
         </video>
     </header>
 
@@ -57,17 +57,17 @@
         <div class="container">
             <h2>Kids Products</h2>
             <div class="product">
-                <img src="/assets/images/kidsFrootLoops.png" alt="FrootLoops">
+                <img src="./assets/images/kidsFrootLoops.png" alt="FrootLoops">
                 <p>Kellogg's® Froot Loops Original</p>
                 <a href="#" class="btn">Details</a>
             </div>
             <div class="product">
-                <img src="/assets/images/chocosWebsKids.png" alt="chocosWebsKids">
+                <img src="./assets/images/chocosWebsKids.png" alt="chocosWebsKids">
                 <p>Vkellogg's® Chocos® Webs</p>
                 <a href="#" class="btn">Details</a>
             </div>
             <div class="product">
-                <img src="/assets/images/chocosChottaLaddooKids.avif" alt="chocosChottaLaddooKids">
+                <img src="./assets/images/chocosChottaLaddooKids.avif" alt="chocosChottaLaddooKids">
                 <p>Vkellogg's® Froot Loops Original</p>
                 <a href="#" class="btn">Details</a>
             </div>
@@ -78,17 +78,17 @@
         <div class="container">
             <h2>Adults Products</h2>
             <div class="product">
-                <img src="/assets/images/crunchyGranolaChocolateAlmonds.avif" alt="crunchyGranolaChocolateAlmonds">
+                <img src="./assets/images/crunchyGranolaChocolateAlmonds.avif" alt="crunchyGranolaChocolateAlmonds">
                 <p>Vkellogg's® Crunchy Granola Chocolate & Almonds</p>
                 <a href="#" class="btn">Details</a>
             </div>
             <div class="product">
-                <img src="/assets/images/chocolateMuesli.avif" alt="chocolateMuesli">
+                <img src="./assets/images/chocolateMuesli.avif" alt="chocolateMuesli">
                 <p>VKellogg's® Chocolate Muesli</p>
                 <a href="#" class="btn">Details</a>
             </div>
             <div class="product">
-                <img src="/assets/images/crunchyGranolaAlmondsnCranberries.avif" alt="crunchyGranolaAlmondsnCranberries">
+                <img src="./assets/images/crunchyGranolaAlmondsnCranberries.avif" alt="crunchyGranolaAlmondsnCranberries">
                 <p>Vkellogg's® Crunchy Granola Almonds & Cranberries</p>
                 <a href="#" class="btn">Details</a>
             </div>
@@ -101,33 +101,33 @@
             <div class="contact">
                 <p>Contact us</p>
                 <a href="">
-                    <img src="/assets/images/icons/youtube.svg" alt="youtube">
+                    <img src="./assets/images/icons/youtube.svg" alt="youtube">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/twitter.svg" alt="twitter">
+                    <img src="./assets/images/icons/twitter.svg" alt="twitter">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/linkedin.svg" alt="linkedin">
+                    <img src="./assets/images/icons/linkedin.svg" alt="linkedin">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/facebook.svg" alt="facebook">
+                    <img src="./assets/images/icons/facebook.svg" alt="facebook">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/instagram.svg" alt="instagram">
+                    <img src="./assets/images/icons/instagram.svg" alt="instagram">
                 </a>
                 <a href="mailto:naufal.ananda@binus.ac.id">
-                    <img src="/assets/images/icons/email.svg" alt="email">
+                    <img src="./assets/images/icons/email.svg" alt="email">
                 </a>
             </div>
             <div class="footer-logo">
-                <img src="/assets/images/Logowhite2.png" alt="logo">
+                <img src="./assets/images/Logowhite2.png" alt="logo">
             </div>
         </section>
         <div class="credit">Copyright 2024 | Vkellogg'S </div>
     </footer>
 
 
-    <script src="/assets/js/nav.js"></script>
+    <script src="./assets/js/nav.js"></script>
 
 </body>
 </html>
