--- a/aboutUsPage.html
+++ b/aboutUsPage.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/assets/images/icons/favicon.png">
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="../assets/css/nav.css">
+    <link rel="stylesheet" href="./assets/css/nav.css">
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/headerHome.css">
     <link rel="stylesheet" href="/assets/css/footer.css">
@@ -20,13 +20,13 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar">
         <div class="navbar-left">
-            <img class="Logo" src="/assets/images/Logo.png" alt="Logo" />
+            <img class="Logo" src="./assets/images/Logo.png" alt="Logo" />
         </div>
         <div class="navbar-right" id="navbar-right">
-            <a href="homePage.html" target="_blank">Home</a>
-            <a href="productPage.html" target="_blank">Product</a>
-            <a href="recipesPage.html" target="_blank">Recipes</a>
-            <a href="aboutUsPage.html" target="_blank">About Us</a>
+            <a href="homePage.html">Home</a>
+            <a href="productPage.html">Product</a>
+            <a href="recipesPage.html">Recipes</a>
+            <a href="aboutUsPage.html">About Us</a>
             <a href="contactUsPage.html">Contact Us</a>
         </div>
         <div class="burger-icon" id="burger-icon">
@@ -37,11 +37,11 @@
     </nav>
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
-        <a href="homePage.html" target="_blank">Home</a>
-        <a href="productPage.html" target="_blank">Product</a>
-        <a href="recipesPage.html" target="_blank">Recipes</a>
-        <a href="aboutUsPage.html" target="_blank">About Us</a>
-        <a href="contactUsPage.html" target="_blank">Contact Us</a>
+        <a href="homePage.html">Home</a>
+        <a href="productPage.html">Product</a>
+        <a href="recipesPage.html">Recipes</a>
+        <a href="aboutUsPage.html">About Us</a>
+        <a href="contactUsPage.html">Contact Us</a>
     </div>
 
     <!-- Title video frame -->
@@ -84,33 +84,33 @@
             <div class="contact">
                 <p>Contact us</p>
                 <a href="">
-                    <img src="/assets/images/icons/youtube.svg" alt="youtube">
+                    <img src="./assets/images/icons/youtube.svg" alt="youtube">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/twitter.svg" alt="twitter">
+                    <img src="./assets/images/icons/twitter.svg" alt="twitter">
                 </a>
                 <a href="#">
-                    <img src="/assets/images/icons/linkedin.svg" alt="linkedin">
+                    <img src="./assets/images/icons/linkedin.svg" alt="linkedin">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/facebook.svg" alt="facebook">
+                    <img src="./assets/images/icons/facebook.svg" alt="facebook">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/instagram.svg" alt="instagram">
+                    <img src="./assets/images/icons/instagram.svg" alt="instagram">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/email.svg" alt="email">
+                    <img src="./assets/images/icons/email.svg" alt="email">
                 </a>
             </div>
             <div class="footer-logo">
-                <img src="/assets/images/Logowhite2.png" alt="logo">
+                <img src="./assets/images/Logowhite2.png" alt="logo">
             </div>
         </section>
         <div class="credit">Copyright 2024 | Vkellogg'S </div>
     </footer>
 
 
-    <script src="/assets/js/nav.js"></script>
-    <script src="/assets/js/aboutUsPage.js"></script>
+    <script src="./assets/js/nav.js"></script>
+    <script src="./assets/js/aboutUsPage.js"></script>
 </body>
 </html>
