--- a/contactUsPage.html
+++ b/contactUsPage.html
@@ -6,10 +6,10 @@
     <title>Contact Us</title>
 
     <!-- favicon -->
-    <link rel="icon" type="image/x-icon" href="/assets/images/icons/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/images/icons/favicon.png">
 
     <!-- Link CSS -->
-    <link rel="stylesheet" href="../assets/css/nav.css">
+    <link rel="stylesheet" href="./assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/global.css">
     <link rel="stylesheet" href="./assets/css/headerHome.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar">
         <div class="navbar-left">
-            <img class="Logo" src="/assets/images/Logo.png" alt="Logo" />
+            <img class="Logo" src="./assets/images/Logo.png" alt="Logo" />
         </div>
         <div class="navbar-right" id="navbar-right">
             <a href="index.html">Home</a>
@@ -37,10 +37,10 @@
     </nav>
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
-        <a href="homePage.html" target="_blank">Home</a>
-        <a href="productPage.html" target="_blank">Product</a>
-        <a href="recipesPage.html" target="_blank">Recipes</a>
-        <a href="aboutUsPage.html" target="_blank">About Us</a>
+        <a href="index.html">Home</a>
+        <a href="productPage.html">Product</a>
+        <a href="recipesPage.html">Recipes</a>
+        <a href="aboutUsPage.html">About Us</a>
         <a href="#">Contact Us</a>
     </div>
     
@@ -49,7 +49,7 @@
         <h1>Vkellogg's</h1>
         <h2>"Innovating Breakfast Since 1906. From Our Home in Battle Creek to Your Table Worldwide."</h2>
         <video autoplay muted loop plays-inline class="video-bg">
-            <source src="/assets/video/videoplayback.mp4" type="video/mp4">
+            <source src="./assets/video/videoplayback.mp4" type="video/mp4">
         </video>
     </header>
 
@@ -100,32 +100,32 @@
             <div class="contact">
                 <p>Contact us</p>
                 <a href="">
-                    <img src="/assets/images/icons/youtube.svg" alt="youtube">
+                    <img src="./assets/images/icons/youtube.svg" alt="youtube">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/twitter.svg" alt="twitter">
+                    <img src="./assets/images/icons/twitter.svg" alt="twitter">
                 </a>
                 <a href="#">
-                    <img src="/assets/images/icons/linkedin.svg" alt="linkedin">
+                    <img src="./assets/images/icons/linkedin.svg" alt="linkedin">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/facebook.svg" alt="facebook">
+                    <img src="./assets/images/icons/facebook.svg" alt="facebook">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/instagram.svg" alt="instagram">
+                    <img src="./assets/images/icons/instagram.svg" alt="instagram">
                 </a>
                 <a href="">
-                    <img src="/assets/images/icons/email.svg" alt="email">
+                    <img src="./assets/images/icons/email.svg" alt="email">
                 </a>
             </div>
             <div class="footer-logo">
-                <img src="/assets/images/Logowhite2.png" alt="logo">
+                <img src="./assets/images/Logowhite2.png" alt="logo">
             </div>
         </section>
         <div class="credit">Copyright 2024 | Vkellogg'S </div>
     </footer>
 
-    <script src="/assets/js/nav.js"></script>
-    <script src="/assets/js/contactUsPage.js"></script>
+    <script src="./assets/js/nav.js"></script>
+    <script src="./assets/js/contactUsPage.js"></script>
 </body>
 </html>
