--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <img class="Logo" src="./assets/images/Logo.png" alt="Logo" />
         </div>
         <div class="navbar-right" id="navbar-right">
-            <a href="/" target="_blank">Home</a>
-            <a href="productPage.html" target="_blank">Product</a>
-            <a href="recipesPage.html" target="_blank">Recipes</a>
-            <a href="aboutUsPage.html" target="_blank">About Us</a>
-            <a href="">Contact Us</a>
+            <a href="#" target="_blank">Home</a>
+            <a href="productPage.html">Product</a>
+            <a href="recipesPage.html">Recipes</a>
+            <a href="aboutUsPage.html">About Us</a>
+            <a href="contactUsPage.html">Contact Us</a>
         </div>
         <div class="burger-icon" id="burger-icon">
             <div class="bar"></div>
@@ -43,10 +43,10 @@
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
         <a href="#">Home</a>
-        <a href="/productPage.html" target="_blank">Product</a>
-        <a href="/recipesPage.html" target="_blank">Recipes</a>
-        <a href="/aboutUsPage.html" target="_blank">About Us</a>
-        <a href="/contactUsPage.html" target="_blank">Contact Us</a>
+        <a href="productPage.html">Product</a>
+        <a href="recipesPage.html">Recipes</a>
+        <a href="aboutUsPage.html">About Us</a>
+        <a href="contactUsPage.html">Contact Us</a>
     </div>
 
 
@@ -182,6 +182,6 @@
         <div class="credit">Copyright 2024 | Vkellogg'S </div>
     </footer>
 
-    <script src="/assets/js/nav.js"></script>
+    <script src="./assets/js/nav.js"></script>
 </body>
 </html>
