--- a/aboutUsPage.html
+++ b/aboutUsPage.html
@@ -10,10 +10,10 @@
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assets/css/nav.css">
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/headerHome.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/aboutUsPage.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/headerHome.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/aboutUsPage.css">
 
 </head>
 <body>
