--- a/productPage.html
+++ b/productPage.html
@@ -9,10 +9,10 @@
 
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assets/css/nav.css">
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/headerHome.css">
-    <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/productPage.css">
+    <link rel="stylesheet" href="./assets/css/global.css">
+    <link rel="stylesheet" href="./assets/css/headerHome.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/productPage.css">
 
 </head>
 <body>
