--- a/aboutUsPage.html
+++ b/aboutUsPage.html
@@ -49,13 +49,13 @@
         <h1>Vkellogg's</h1>
         <h2>"Innovating Breakfast Since 1906. From Our Home in Battle Creek to Your Table Worldwide."</h2>
         <video autoplay muted loop plays-inline class="video-bg">
-            <source src="/assets/video/videoplayback.mp4" type="video/mp4">
+            <source src="./assets/video/videoplayback.mp4" type="video/mp4">
         </video>
     </header>
 
     <main class="main">
         <section class="mainContent" id="history">
-            <img src="/assets/images/history.webp" alt="VKellogg's History">
+            <img src="./assets/images/history.webp" alt="VKellogg's History">
             <div class="text-content">
                 <h2>History</h2>
                 <p>We proudly uphold the values VKellogg's instilled more than 100 years ago — and now we’re doing it in 180 countries across the world including India and South Asia. We provide you and your family better breakfasts that lead to better days, and we flake corn the same way V.K. Kellogg did back in 1898. It just tastes better that way!</p>
