--- a/aboutUsPage.html
+++ b/aboutUsPage.html
@@ -23,7 +23,7 @@
             <img class="Logo" src="./assets/images/Logo.png" alt="Logo" />
         </div>
         <div class="navbar-right" id="navbar-right">
-            <a href="homePage.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="productPage.html">Product</a>
             <a href="recipesPage.html">Recipes</a>
             <a href="aboutUsPage.html">About Us</a>
@@ -37,7 +37,7 @@
     </nav>
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
-        <a href="homePage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="productPage.html">Product</a>
         <a href="recipesPage.html">Recipes</a>
         <a href="aboutUsPage.html">About Us</a>
