--- a/recipesPage.html
+++ b/recipesPage.html
@@ -25,7 +25,7 @@
         <div class="navbar-right" id="navbar-right">
             <a href="index.html">Home</a>
             <a href="productPage.html">Product</a>
-            <a href="#">Recipes</a>
+            <a href="recipesPage.html">Recipes</a>
             <a href="aboutUsPage.html">About Us</a>
             <a href="contactUsPage.html">Contact Us</a>
         </div>
@@ -39,7 +39,7 @@
         <span class="closebtn" id="closebtn">&times;</span>
         <a href="index.html">Home</a>
         <a href="productPage.html">Product</a>
-        <a href="#">Recipes</a>
+        <a href="recipesPage.html">Recipes</a>
         <a href="aboutUsPage.html">About Us</a>
         <a href="contactUsPage.html">Contact Us</a>
     </div>
