--- a/contactUsPage.html
+++ b/contactUsPage.html
@@ -27,7 +27,7 @@
             <a href="productPage.html">Product</a>
             <a href="recipesPage.html">Recipes</a>
             <a href="aboutUsPage.html">About Us</a>
-            <a href="">Contact Us</a>
+            <a href="contactUsPage.html">Contact Us</a>
         </div>
         <div class="burger-icon" id="burger-icon">
             <div class="bar"></div>
@@ -41,7 +41,7 @@
         <a href="productPage.html">Product</a>
         <a href="recipesPage.html">Recipes</a>
         <a href="aboutUsPage.html">About Us</a>
-        <a href="#">Contact Us</a>
+        <a href="contactUsPage.html">Contact Us</a>
     </div>
     
     <!-- Title video frame -->
