--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img class="Logo" src="./assets/images/Logo.png" alt="Logo" />
         </div>
         <div class="navbar-right" id="navbar-right">
-            <a href="#" target="_blank">Home</a>
+            <a href="index.html">Home</a>
             <a href="productPage.html">Product</a>
             <a href="recipesPage.html">Recipes</a>
             <a href="aboutUsPage.html">About Us</a>
@@ -42,7 +42,7 @@
     </nav>
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="productPage.html">Product</a>
         <a href="recipesPage.html">Recipes</a>
         <a href="aboutUsPage.html">About Us</a>
