--- a/productPage.html
+++ b/productPage.html
@@ -23,7 +23,7 @@
         </div>
         <div class="navbar-right" id="navbar-right">
             <a href="index.html">Home</a>
-            <a href="#">Product</a>
+            <a href="productPage.html">Product</a>
             <a href="recipesPage.html">Recipes</a>
             <a href="aboutUsPage.html">About Us</a>
             <a href="contactUsPage.html">Contact Us</a>
@@ -37,7 +37,7 @@
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
         <a href="homePage.html">Home</a>
-        <a href="#">Product</a>
+        <a href="productPage.html">Product</a>
         <a href="recipesPage.html">Recipes</a>
         <a href="aboutUsPage.html">About Us</a>
         <a href="contactUsPage.html">Contact Us</a>
