--- a/aboutUsPage.html
+++ b/aboutUsPage.html
@@ -65,7 +65,7 @@
             </div>
         </section>
         <section class = "mainContent">
-            <img src="/assets/images/vision-Mision.jpg" alt="VKellogg's Vision Mission">
+            <img src="./assets/images/vision-Mision.jpg" alt="VKellogg's Vision Mission">
             <div class="text-content">
                 <h2>Vision</h2>
                 <p>To be the global leader in breakfast foods and snacks, renowned for our commitment to quality, innovation, and customer satisfaction. We aim to create delightful and nutritious products that enrich lives and build lasting relationships with customers worldwide.</p>
