--- a/productPage.html
+++ b/productPage.html
@@ -36,7 +36,7 @@
     </nav>
     <div class="sidebar" id="sidebar">
         <span class="closebtn" id="closebtn">&times;</span>
-        <a href="homePage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="productPage.html">Product</a>
         <a href="recipesPage.html">Recipes</a>
         <a href="aboutUsPage.html">About Us</a>
